prometheus/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth
spec:
  basicAuth:
    secret: htaccess
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauthremove
spec:
  basicAuth:
    removeHeader: true
    secret: htaccess
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - http
    - https
  routes:
  - match: HostRegexp(`prometheus.{domain:.+}`)
    kind: Rule
    middlewares:
    - name: basicauth
    services:
    - name: prometheus
      port: 9090

  - match: HostRegexp(`blackbox.{domain:.+}`)
    kind: Rule
    middlewares:
    - name: basicauth
    services:
    - name: blackbox-exporter
      port: 8080

  - match: HostRegexp(`grafana.{domain:.+}`)
    kind: Rule
    middlewares:
    - name: basicauthremove
    - name: adminheader
    services:
    - name: grafana
      port: 80

  - match: HostRegexp(`karma.{domain:.+}`)
    kind: Rule
    middlewares:
    - name: basicauthremove
    - name: adminheader
    services:
    - name: karma
      port: 80

  - match: HostRegexp(`alertmanager.{domain:.+}`)
    kind: Rule
    middlewares:
    - name: basicauthremove
    - name: adminheader
    services:
    - name: alertmanager
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: adminheader
spec:
  headers:
    accessControlAllowCredentials: false
    customRequestHeaders:
      X-WEBAUTH-USER: "admin"
